--- a/affiliate-program.html
+++ b/affiliate-program.html
@@ -24,10 +24,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Croloft Affiliate Program</title>
     <style>
+         /* Circular Std - Book/Regular (400) */
         @font-face {
             font-family: 'Circular Std';
-            src: local('Circular Std'), url('fonts/circular-std.ttf') format('woff');
-            font-weight: normal;
+            src: url('fonts/CircularStd-Book.ttf') format('truetype');
+            font-weight: 400;
+            font-style: normal;
+        }
+
+        /* Circular Std - Medium (500) */
+        @font-face {
+            font-family: 'Circular Std';
+            src: url('fonts/CircularStd.ttf') format('truetype');
+            font-weight: 500;
+            font-style: normal;
+        }
+
+        /* Circular Std - Bold (700) */
+        @font-face {
+            font-family: 'Circular Std';
+            src: url('fonts/CircularStd-Bold.ttf') format('truetype');
+            font-weight: 600;
             font-style: normal;
         }
 
