--- a/index.html
+++ b/index.html
@@ -392,14 +392,15 @@
   }
   
   .defcon-crypto-cta {
-    font-size: 15px; 
+    font-size: 18px; 
     margin-top: 0.5rem;
     margin-bottom: 2rem;
+    padding: 5px 5px 5px 25px;
   }
   
   .defcon-crypto-icon {
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
   }
   
   .defcon-crypto-icon svg {
