--- a/index.html
+++ b/index.html
@@ -1325,7 +1325,7 @@ document.addEventListener("DOMContentLoaded", function() {
     <div class="it-global-track" id="itTrack">
       
       <div class="it-global-card">
-        <div class="it-global-card-img" style="background-image: url('https://images.unsplash.com/photo-1521737604893-d14cc237f11d?auto=format&fit=crop&w=800&q=80');"></div>
+        <div class="it-global-card-img" style="background-image: url('https://images.pexels.com/photos/31216387/pexels-photo-31216387.jpeg');"></div>
         <div class="it-global-card-overlay"></div>
         <div class="it-global-card-content">
           <div>
@@ -1340,7 +1340,7 @@ document.addEventListener("DOMContentLoaded", function() {
       </div>
 
       <div class="it-global-card">
-        <div class="it-global-card-img" style="background-image: url('https://images.unsplash.com/photo-1451187580459-43490279c0fa?auto=format&fit=crop&w=800&q=80');"></div>
+        <div class="it-global-card-img" style="background-image: url('https://images.pexels.com/photos/31216390/pexels-photo-31216390.jpeg');"></div>
         <div class="it-global-card-overlay"></div>
         <div class="it-global-card-content">
           <div>
@@ -1355,7 +1355,7 @@ document.addEventListener("DOMContentLoaded", function() {
       </div>
 
       <div class="it-global-card">
-        <div class="it-global-card-img" style="background-image: url('https://images.unsplash.com/photo-1550751827-4bd374c3f58b?auto=format&fit=crop&w=800&q=80');"></div>
+        <div class="it-global-card-img" style="background-image: url('https://images.pexels.com/photos/12966861/pexels-photo-12966861.jpeg');"></div>
         <div class="it-global-card-overlay"></div>
         <div class="it-global-card-content">
           <div>
