--- a/bot.html
+++ b/bot.html
@@ -428,11 +428,15 @@
                     .c-search-input::placeholder { color: #9ca3af; font-weight: 400;}
                     
                     .c-send-btn {
-                        position: absolute; right: 8px; top: 50%; transform: translateY(-50%);
-                        background: #192c6d; color: white; border-radius: 50px;
-                        width: 40px; height: 40px;
+                        position: absolute; right: 6px; top: 50%; transform: translateY(-50%);
+                        background: #192c6d; color: white; border-radius: 6px;
+                        width: 36px; height: 36px;
                         display: flex; align-items: center; justify-content: center;
                         opacity: 0; pointer-events: none; transition: opacity 0.3s;
+                        border: none; cursor: pointer;
+                    }
+                    .c-send-btn:hover {
+                        background: #0f1f4d;
                     }
 
                     .c-legal-text {
@@ -570,7 +574,7 @@
 
                 <header class="c-global-header">
                     <div class="c-header-logo">
-                    <a href="index.html"><img src="thumbnails/hyperion logo (2).png" style="height: 30px; vertical-align: middle;"/></a>    
+                    <a href="index.html"><img src="thumbnails/croloft2.png" style="height: 20px; vertical-align: middle;"/></a>    
                     </div>
                     <button class="c-btn-download">Contact Cronos ${icons.qr}</button>
                 </header>
@@ -628,181 +632,5 @@
 
         customElements.define('cronos-it-portal', CronosItPortal);
     </script>
-</body>
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- Preloader HTML -->
-<!-- Add this at the top of your body (right after opening <body> tag) -->
-<div class="preloader">
-  <div class="preloader-logo">
-    <div class="logo-pulse"></div>
-    <img src="thumbnails/hyperion logo (2).png" alt="Defcon Logo" class="preloader-logo-img">
-    <div class="preloader-progress">
-      <div class="preloader-progress-bar"></div>
-    </div>
-  </div>
-</div>
-
-<style>
-/* Preloader Styles */
-.preloader {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: #080d1b;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 9999;
-  transition: opacity 0.6s ease, visibility 0.6s ease;
-}
-
-.preloader.loaded {
-  opacity: 0;
-  visibility: hidden;
-}
-
-.preloader-logo {
-  position: relative;
-  text-align: center;
-  max-width: 200px;
-}
-
-.preloader-logo-img {
-  width: 120px;
-  height: auto;
-  position: relative;
-  z-index: 2;
-}
-
-.logo-pulse {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  z-index: 1;
-  animation: pulse 2s ease-out infinite;
-}
-
-.preloader-progress {
-  width: 100%;
-  height: 4px;
-  background: rgba(255, 255, 255, 0.1);
-  border-radius: 2px;
-  margin-top: 30px;
-  overflow: hidden;
-}
-
-.preloader-progress-bar {
-  height: 100%;
-  width: 0%;
-  background: linear-gradient(90deg, #0091ff, #00c6ff);
-  border-radius: 2px;
-  transition: width 0.4s ease;
-}
-
-/* Animations */
-@keyframes pulse {
-  0% {
-    transform: translate(-50%, -50%) scale(0.8);
-    opacity: 0.7;
-  }
-  70% {
-    transform: translate(-50%, -50%) scale(1.1);
-    opacity: 0.3;
-  }
-  100% {
-    transform: translate(-50%, -50%) scale(1.3);
-    opacity: 0;
-  }
-}
-
-@keyframes logoFloat {
-  0%, 100% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-10px);
-  }
-}
-
-/* Add this to your existing media queries */
-@media (max-width: 768px) {
-  .preloader-logo {
-    max-width: 150px;
-  }
-  .preloader-logo-img {
-    width: 100px;
-  }
-  .logo-pulse {
-    width: 120px;
-    height: 120px;
-  }
-}
-</style>
-
-<script>
-// Add this to your existing JavaScript
-document.addEventListener('DOMContentLoaded', function() {
-  const preloader = document.querySelector('.preloader');
-  const progressBar = document.querySelector('.preloader-progress-bar');
-  
-  // Simulate loading progress (replace with real loading logic)
-  let progress = 0;
-  const interval = setInterval(() => {
-    progress += Math.random() * 50; // Simulate random progress
-    if (progress >= 100) {
-      progress = 100;
-      clearInterval(interval);
-      setTimeout(() => {
-        preloader.classList.add('loaded');
-        // Remove preloader from DOM after animation completes
-        setTimeout(() => {
-          preloader.remove();
-        }, 600);
-      }, 500);
-    }
-    progressBar.style.width = progress + '%';
-  }, 200);
-
-  // For actual implementation, you would:
-  // 1. Listen to window.load event instead of simulating
-  // 2. Track actual resource loading progress
-  // 3. Remove preloader when everything is loaded
-  
-  // Real implementation would look more like:
-  /*
-  window.addEventListener('load', function() {
-    preloader.classList.add('loaded');
-    setTimeout(() => {
-      preloader.remove();
-    }, 600);
-  });
-  */
-});
-</script>
-
 </body>
 </html>
