--- a/index.html
+++ b/index.html
@@ -795,9 +795,9 @@ document.addEventListener("DOMContentLoaded", function() {
         .itsvc-h1 {
             font-size: 48px;
             line-height: 1.1;
-            font-weight: 700;
+            font-weight: 500;
             color: var(--itsvc-text-dark);
-            letter-spacing: -1.5px;
+            letter-spacing: -0.02em;
             margin-bottom: 30px;
         }
 
