--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@ document.addEventListener("DOMContentLoaded", function() {
         }
 
         .tech-hero-container-unique {
-            background: linear-gradient(180deg, #0a0e1a 0%, #141b2d 100%);
+            background: #F5F7FA;
             padding: 200px 40px;
             font-family: 'Circular Std', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
             min-height: 400px;
@@ -567,7 +567,7 @@ document.addEventListener("DOMContentLoaded", function() {
         }
 
         .tech-hero-heading-unique {
-            color: #ffffff;
+            color: #000;
             font-size: 58px;
             font-weight: 500;
             line-height: 1.2;
@@ -577,7 +577,7 @@ document.addEventListener("DOMContentLoaded", function() {
         }
 
         .tech-hero-heading-unique .tech-hero-highlight-unique {
-            color: #9ca3af;
+            color: #7c7c7c;
             font-weight: 500;
             letter-spacing: -0.03em;
         }
@@ -592,12 +592,12 @@ document.addEventListener("DOMContentLoaded", function() {
         }
 
         .tech-hero-card-unique {
-            border-top: 1px solid #2d3748;
+            border-top: 1px solid #000000;
             padding-top: 30px;
         }
 
         .tech-hero-card-title-unique {
-            color: #ffffff;
+            color: #000;
             font-size: 22px;
             font-weight: 500;
             letter-spacing: -0.02em;
@@ -605,7 +605,7 @@ document.addEventListener("DOMContentLoaded", function() {
         }
 
         .tech-hero-card-subtitle-unique {
-            color: #ffffff;
+            color: #000000;
             font-size: 22px;
             font-weight: 500;
             margin: 0 0 20px 0;
@@ -614,7 +614,7 @@ document.addEventListener("DOMContentLoaded", function() {
         }
 
         .tech-hero-card-description-unique {
-            color: #9ca3af;
+            color: #797979;
             font-size: 20px;
             font-weight: 500;
             line-height: 1;
@@ -1551,6 +1551,7 @@ document.addEventListener("DOMContentLoaded", function() {
             background-color: var(--itco-bg-charcoal-accent);
             z-index: 2; /* Sits behind image */
             border-radius: 2px;
+            border: 1px solid #423c5ddd;
         }
 
         /* Social Icons Row */
@@ -1622,6 +1623,12 @@ document.addEventListener("DOMContentLoaded", function() {
 
             .itco-headline {
                 font-size: 32px;
+            }
+
+            .itco-profile-img { }
+
+            .itco-image-backdrop {
+                right: 30px;
             }
         }
         /* --- Scoped CSS End --- */
