--- a/affiliate-program.html
+++ b/affiliate-program.html
@@ -48,6 +48,8 @@
             font-style: normal;
         }
 
+           @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700;900&family=Work+Sans:wght@300;400;500;600;700&display=swap");
+
         :root {
             --primary: #0184e8;
             --primary-hover: #0496ff;
