--- a/form.html
+++ b/form.html
@@ -596,7 +596,7 @@
         <div class="crns-form-container">
             
             <div class="crns-logo-placeholder">
-                <a href="index.html"><img src="thumbnails/croloft1.png" alt="Cronos IT Solutions" class="crns-logo-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                <a href="index.html"><img src="thumbnails/cro (2).png" alt="Cronos IT Solutions" class="crns-logo-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
                 </a>
                 <span style="display:none; font-weight:700; font-size:20px; color:#111827;">Cronos IT Solutions</span>
             </div>
