--- a/jobs.html
+++ b/jobs.html
@@ -309,7 +309,7 @@
             </a>
             
             <div class="croloft-centered-content" style="display: flex;">
-                <img src="thumbnails/croloft1.png" alt="Croloft Logo" style="height: 40px;" class="croloft-img">
+                <img src="thumbnails/logo1.png" alt="Croloft Logo" style="height: 40px;" class="croloft-img">
             </div>
         </header>
 
