--- a/bot.html
+++ b/bot.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cronos IT Portal</title>
+    <!-- WEB TAB ICON -->
+    <link rel="icon" type="image/png" href="thumbnails/top-1.png">
     <style>
         /* 1. FULL SCREEN LOCK & BACKGROUND */
         body, html { 
