--- a/careers.html
+++ b/careers.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!-- WEB TAB ICON -->
+    <link rel="icon" type="image/png" href="thumbnails/top-1.png">
 <head>
     <meta charset="UTF-8">
     <title>My Website</title>
@@ -79,6 +81,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- WEB TAB ICON -->
+    <link rel="icon" type="image/png" href="thumbnails/top-1.png">
     <style>
         @font-face {
             font-family: 'Circular Std';
