--- a/security.html
+++ b/security.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Security</title>
-    
+    <!-- WEB TAB ICON -->
+    <link rel="icon" type="image/png" href="thumbnails/top-1.png">
     <script src="header.js" defer></script>
     <script src="footer.js" defer></script> 
 </head>
@@ -49,6 +50,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Security First, Always | Hyperion</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+
     <style>
         /* --- CSS Variables for Consistency --- */
         :root {
