--- a/affiliates.html
+++ b/affiliates.html
@@ -53,6 +53,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Affiliate Programme - IT Solutions</title>
+    <!-- WEB TAB ICON -->
+    <link rel="icon" type="image/png" href="thumbnails/top-1.png">
     <style>
          /* Circular Std - Book/Regular (400) */
         @font-face {
