--- a/tech-stack.html
+++ b/tech-stack.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Affiliate</title>
-    
+    <!-- WEB TAB ICON -->
+    <link rel="icon" type="image/png" href="thumbnails/top-1.png">
     <script src="header.js" defer></script>
     <script src="footer.js" defer></script> 
 </head>
