--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -431,7 +431,8 @@
 
   <section class="it-dm-hero-section">
     <div class="it-dm-hero-header">
-      <span class="it-dm-hero-icon" style="background: url('thumbnails/01.png') center/cover;"></span>
+      <span class="it-dm-hero-icon" style="background: url('thumbnails/01.png') center/cover;">
+      </span>
       <span>Digital Marketing Intelligence</span>
     </div>
 
