--- a/quote.html
+++ b/quote.html
@@ -31,7 +31,7 @@
 }
 *,*::before,*::after{box-sizing:border-box;margin:0;padding:0}
 html{scroll-behavior:smooth}
-body{font-family:var(--font);background:var(--bg);color:var(--text-primary);min-height:100vh;-webkit-font-smoothing:antialiased}
+body{font-family:var(--font);background:var(--bg);color:var(--text-primary);min-height:100vh;-webkit-font-smoothing:antialiased;-webkit-text-size-adjust:100%}
 
 /* ── NAV ── */
 nav{position:fixed;top:0;left:0;right:0;z-index:300;height:64px;background:#fff;border-bottom:1px solid var(--border);box-shadow:var(--shadow-sm);display:flex;align-items:center;justify-content:space-between;padding:0 32px}
@@ -60,7 +60,7 @@ nav{position:fixed;top:0;left:0;right:0;z-index:300;height:64px;background:#fff;
 .step-connector.done{background:var(--accent)}
 
 /* ── LAYOUT ── */
-.main{max-width:1140px;margin:0 auto;padding:0 24px 100px}
+.main{max-width:1340px;margin:0 auto;padding:0 24px 100px}
 .section{display:none;animation:fadeUp .28s ease;padding-top:40px}
 .section.active{display:block}
 @keyframes fadeUp{from{opacity:0;transform:translateY(12px)}to{opacity:1;transform:none}}
@@ -80,8 +80,8 @@ nav{position:fixed;top:0;left:0;right:0;z-index:300;height:64px;background:#fff;
 .cat-icon{width:42px;height:42px;border-radius:10px;background:#f0f2f8;border:1px solid var(--border);display:flex;align-items:center;justify-content:center;margin-bottom:12px}
 .cat-icon svg{width:20px;height:20px;stroke:var(--accent);fill:none;stroke-width:1.8;stroke-linecap:round;stroke-linejoin:round}
 .cat-card.selected .cat-icon{background:rgba(26,108,246,.1);border-color:rgba(26,108,246,.2)}
-.cat-card h3{font-size:15px;font-weight:700;color:var(--dark-blue);margin-bottom:4px}
-.cat-card p{font-size:12px;color:var(--text-secondary);line-height:1.5}
+.cat-card h3{font-size:21px;font-weight:700;color:var(--dark-blue);margin-bottom:4px}
+.cat-card p{font-size:16px;color:var(--text-secondary);line-height:1.5}
 
 /* ── MAIN LAYOUT ── */
 .content-layout{display:grid;grid-template-columns:1fr 320px;gap:24px;align-items:start}
