--- a/quote.html
+++ b/quote.html
@@ -412,7 +412,7 @@ nav{position:fixed;top:0;left:0;right:0;z-index:300;height:64px;background:#fff;
                       data-tiers='["Basic","Pro","Enterprise"]'
                       data-prices='[28000,58000,120000]'
                       data-timelines='["2–4 weeks","4–8 weeks","8–14 weeks"]'
-                      data-active="0">
+                      data-active="0"><h4 style="margin-bottom: 0.6rem;">What's Included</h4>
                       <li data-min="0"><i class="fi">&#10003;</i>NLP-powered conversational AI</li>
                       <li data-min="0"><i class="fi">&#10003;</i>Website &amp; email integration</li>
                       <li data-min="0"><i class="fi">&#10003;</i>Ticketing &amp; conversation logs</li>
